# municipal-ai-evidence-gaps

./: .gitignore  CITATION.cff  LICENSE  README.md  RELEASE_NOTES_v1.0.2.md  RELEASE_NOTES_v1.0.4.md  pyproject.toml  requirements.txt
data/processed/: coding_results_v0_1_1.csv  coding_results_v0_1_1_sensitivity_ok_only.csv  coding_template.csv  corpus_manifest_quality_flags_v0_1.csv  corpus_manifest_template.csv  corpus_manifest_v0_1.csv  corpus_manifest_v0_1_sensitivity_ok_only.csv  irr_coding_worksheet_v1.csv  irr_merged_v1.csv  tier_a_verification.csv
docs/: coding_decision_rules_v0_1_1.md  coding_protocol.md  conceptual_model.md  data_dictionary.md  editorial_consistency_audit.md  ethics_and_privacy.md  giq_storyline.md  global_editorial_style_guide.md  irr_second_coder_protocol_v1.md  irr_study_design_v1.md  irr_subsample_urls_v1.txt  journal_positioning.md  methodology.md  municipal_sampling_strategy_v0_1.md  non_claims.md  paper_blueprint.md  research_design_v0_1.md  sampling_risks.md  study_protocol_v0_1.md  tier_a_verification_protocol.md
outputs/reports/: bot_gated_sensitivity_check_v0_1.md  coding_decision_log_v0_1_1.md  coding_distribution_audit_v0_1_1.md  coding_protocol_refinement_log.md  coding_summary_v0_1_1.md  corpus_inventory_report.md  corpus_quality_audit_v0_1.md  findings_candidate_figures.md  findings_candidate_tables.md  irr_analysis_workflow_v1.md  (+13 more)
scripts/: build_corpus_index.py  code_observability.py  collect_sources.py  export_tables.py  irr_compute_agreement.py  sensitivity_analysis.py
tests/: test_coding.py  test_schema.py
(+10 files in other folders)
