[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evidence-gaps"
version = "0.1.0"
description = "Comparative analysis artifact for municipal AI documentation evidence gaps"
readme = "README.md"
license = { text = "CC-BY-4.0" }
requires-python = ">=3.11"
authors = [
  { name = "César Andrés", email = "cesar.andress@ucjc.edu" },
]
keywords = [
  "municipal AI governance",
  "algorithmic transparency",
  "evidence gaps",
  "digital government",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: Free for non-commercial use",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "pandas>=2.2",
  "pyyaml>=6.0",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
